--- a/djangoproject/blog/templates/blog/artikel_list.html
+++ b/djangoproject/blog/templates/blog/artikel_list.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>{{ page_title }}</h1>
+    <a href="{% url 'blog:create1' %}">Tambah1</a> |
+    <a href="{% url 'blog:create2' %}">Tambah2</a>
     <ol>
         {% for artikel in object_list %}
             <li><a href="{% url 'blog:detail' artikel.slug %}">{{ artikel.judul }}</a> - oleh: {{ artikel.penulis }}</li>
