--- a/djangoproject/blog/templates/blog/create.html
+++ b/djangoproject/blog/templates/blog/create.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>{{ judul_halaman }}</h1>
+    <h2>create.html</h2>
     <form method="post">
         {% csrf_token %}
         <table>
