--- a/mywebsite/templates/index_user.html
+++ b/mywebsite/templates/index_user.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Hai {{ user }}, selamat datang di {{ judul_halaman }}</h1>
     <ul>
+        <li><a href="{% url 'artikel:index' %}">Artikel</a></li>
         <li><a href="{% url 'keluar' %}">Logout</a></li>
     </ul>
 </body>
