--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Base</title>
+    <div style="border: 2px solid cornflowerblue">
+        <h1>Ini adalah header</h1>
+    </div>
 </head>
 <body>
-    <h1>Ini adalah base.html</h1>
+    {% block konten %}
+    {% endblock %}
 </body>
+<footer>
+    <div style="border: 2px solid black">
+        <h3>Ini ada d footer</h3>
+    </div>
+</footer>
 </html>
