--- a/crmproject/accounts/templates/accounts/navbar.html
+++ b/crmproject/accounts/templates/accounts/navbar.html
@@ -1,16 +1,17 @@
 {% load static %}
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <img src="{% static 'images/logo.png' %}" alt="logo">
+    <a class="nav-item nav-link active" href="{% url 'url_home' %}">
+        <img src="{% static 'images/logo.png' %}" alt="logo">
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Dashboard</a>
-            <a class="nav-item nav-link" href="#">Products</a>
-            <a class="nav-item nav-link" href="#">Customer</a>
+            <a class="nav-item nav-link active" href="{% url 'url_home' %}">Dashboard</a>
+            <a class="nav-item nav-link" href="{% url 'url_product' %}">Products</a>
         </div>
     </div>
 </nav>
