--- a/crmproject/accounts/templates/accounts/products.html
+++ b/crmproject/accounts/templates/accounts/products.html
@@ -15,6 +15,15 @@
                         <th>Price</th>
                     </tr>
 
+                    {% for product in key_products %}
+                        <tr>
+                            <td>{{ product.name }}</td>
+                            <td>{{ product.category }}</td>
+                            <td>{{ product.price }}</td>
+                        </tr>
+                    {% endfor %}
+
+
                 </table>
             </div>
         </div>
