--- a/crmproject/accounts/templates/accounts/status.html
+++ b/crmproject/accounts/templates/accounts/status.html
@@ -7,7 +7,7 @@
                     <h5 class="card-title">Total Orders</h5>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title"></h3>
+                    <h3 class="card-title">{{ key_total_order }}</h3>
                 </div>
             </div>
         </div>
@@ -20,7 +20,7 @@
                     <h5 class="card-title">Orders Delivered</h5>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title"></h3>
+                    <h3 class="card-title">{{ key_delivered }}</h3>
                 </div>
             </div>
         </div>
@@ -33,7 +33,7 @@
                     <h5 class="card-title">Orders Pending</h5>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title"></h3>
+                    <h3 class="card-title">{{ key_pending }}</h3>
                 </div>
             </div>
         </div>
