--- a/crmproject/accounts/templates/accounts/create_order.html
+++ b/crmproject/accounts/templates/accounts/create_order.html
@@ -7,7 +7,11 @@
             <div class="card card-body">
                 <form action="" method="post">
                     {% csrf_token %}
-                    {{ key_order_form }}
+                    {{ key_order_form.management_form }}
+                    {% for form in key_order_form %}
+                        {{ form }}
+                        <hr>
+                    {% endfor %}
                     <input type="submit">
                 </form>
             </div>
