--- a/crmproject/accounts/templates/accounts/customer.html
+++ b/crmproject/accounts/templates/accounts/customer.html
@@ -8,7 +8,8 @@
                 <h5>Customer:</h5>
                 <hr>
                 <a class="btn btn-outline-info  btn-sm btn-block" href="">Update Customer</a>
-                <a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Customer</a>
+                <a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'url_create_order' key_customer.id %}">Place
+                    Order</a>
             </div>
         </div>
 
@@ -25,7 +26,7 @@
             <div class="card card-body">
                 <h5>Total Orders</h5>
                 <hr>
-                <h1 style="text-align: center;padding: 10px">{{ key_customer_order.count }}</h1>
+                <h1 style="text-align: center;padding: 10px">{{ key_customer_order_count }}</h1>
             </div>
         </div>
     </div>
@@ -35,6 +36,7 @@
         <div class="col">
             <div class="card card-body">
                 <form method="get">
+                    {{ key_field_filter.form }}
                     <button class="btn btn-primary" type="submit">Search</button>
                 </form>
             </div>
@@ -48,7 +50,7 @@
                 <table class="table table-sm">
                     <tr>
                         <th>Product</th>
-                        <th>Category</th>
+                        <th>Note</th>
                         <th>Date Order</th>
                         <th>Status</th>
                         <th>Update</th>
@@ -57,7 +59,7 @@
                     {% for customer_order in key_customer_order %}
                         <tr>
                             <td>{{ customer_order.product.name }}</td>
-                            <td>{{ customer_order.product.category }}</td>
+                            <td>{{ customer_order.note }}</td>
                             <td>{{ customer_order.date_created }}</td>
                             <td>{{ customer_order.status }}</td>
                             <td><a href="{% url 'url_update_order' customer_order.id %}" class="btn btn-sm btn-info">Update</a>
