--- a/crmproject/accounts/templates/accounts/navbar.html
+++ b/crmproject/accounts/templates/accounts/navbar.html
@@ -1,5 +1,13 @@
 {% load static %}
 
+<style>
+    .hello-msg {
+        font-size: 18px;
+        color: #fff;
+        margin-right: 20px;
+    }
+</style>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="nav-item nav-link active" href="{% url 'url_home' %}">
         <img src="{% static 'images/logo.png' %}" alt="logo">
@@ -9,9 +17,13 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="{% url 'url_home' %}">Dashboard</a>
-            <a class="nav-item nav-link" href="{% url 'url_product' %}">Products</a>
-        </div>
+        {% if request.user.is_staff %}
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="{% url 'url_home' %}">Dashboard</a>
+                <a class="nav-item nav-link" href="{% url 'url_product' %}">Products</a>
+            </div>
+        {% endif %}
     </div>
+    <span class="hello-msg">Hello, {{ request.user }}</span>
+    <span class="hello-msg"><a href="{% url 'url_logout' %}">Logout</a></span>
 </nav>
