--- a/ecommerce/templates/store/cart.html
+++ b/ecommerce/templates/store/cart.html
@@ -10,15 +10,14 @@
                 <br>
                 <table class="table">
                     <tr>
-                        <th><h5>Items: <strong>3</strong></h5></th>
-                        <th><h5>Total:<strong> $42</strong></h5></th>
+                        <th><h5>Items: <strong>{{ key_order.get_cart_items }}</strong></h5></th>
+                        <th><h5>Total: <strong>${{ key_order.get_cart_total|floatformat:2 }}</strong></h5></th>
                         <th>
                             <a style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout_url' %}">Checkout</a>
                         </th>
                     </tr>
                 </table>
             </div>
-
             <br>
             <div class="box-element">
                 <div class="cart-row">
@@ -29,23 +28,30 @@
                     <div style="flex:1"><strong>Total</strong></div>
                 </div>
 
-                <div class="cart-row">
-                    <div style="flex:2"><img class="row-image" src="{% static 'images/placeholder.png' %}"></div>
-                    <div style="flex:2">
-                        <p>Product 1</p>
-                    </div>
-                    <div style="flex:1">
-                        <p>$20</p>
-                    </div>
-                    <div style="flex:1">
-                        <p class="quantity">2</p>
-                        <div class="quantity">
-                            <img class="chg-quantity" src="{% static  'images/arrow-up.png' %}">
-                            <img class="chg-quantity" src="{% static  'images/arrow-down.png' %}">
+                {% for item in key_items %}
+                    <div class="cart-row">
+                        <div style="flex:2">
+                            <img class="row-image" src="{{ item.product.image_url }}">
+                        </div>
+                        <div style="flex:2">
+                            <p>{{ item.product.name }}</p>
+                        </div>
+                        <div style="flex:1">
+                            <p>${{ item.product.price|floatformat:2 }}</p>
+                        </div>
+                        <div style="flex:1">
+                            <p class="quantity">{{ item.quantity }}</p>
+                            <div class="quantity">
+                                <img class="chg-quantity" src="{% static  'images/arrow-up.png' %}">
+                                <img class="chg-quantity" src="{% static  'images/arrow-down.png' %}">
+                            </div>
+                        </div>
+                        <div style="flex:1">
+                            <p>${{ item.get_total|floatformat:2 }}</p>
                         </div>
                     </div>
-                    <div style="flex:1"><p>$32</p></div>
-                </div>
+                {% endfor %}
+
             </div>
         </div>
 {% endblock %}
