--- a/ecommerce/templates/store/store.html
+++ b/ecommerce/templates/store/store.html
@@ -4,18 +4,21 @@
 {% block main_content %}
     <div class="row">
 
-    {% for product in key_all_products %}
-        <div class="col-lg-4">
-            <img class="thumbnail" src="{{ product.image_url }}">
-            <div class="box-element product">
-                <h6><strong>{{ product.name }}</strong></h6>
-                <hr>
-                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-                <a class="btn btn-outline-success" href="#">View</a>
-                <h4 style="display: inline-block; float: right"><strong>${{ product.price | floatformat:2}}</strong></h4>
+        {% for product in allProductsKey %}
+            <div class="col-lg-4">
+                <img class="thumbnail" src="{{ product.image_url }}">
+                <div class="box-element product">
+                    <h6><strong>{{ product.name }}</strong></h6>
+                    <hr>
+                    <button data-product="{{ product.id }}" data-action="add"
+                            class="btn btn-outline-secondary add-btn update-cart">Add to Cart
+                    </button>
+                    <a class="btn btn-outline-success" href="#">View</a>
+                    <h4 style="display: inline-block; float: right">
+                        <strong>${{ product.price | floatformat:2 }}</strong></h4>
+                </div>
             </div>
-        </div>
-    {% endfor %}
+        {% endfor %}
 
     </div>
 {% endblock %}
