--- a/ecommerce/templates/store/cart.html
+++ b/ecommerce/templates/store/cart.html
@@ -5,15 +5,15 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="box-element">
-                <a class="btn btn-outline-dark" href="{% url 'store_url' %}">&#x2190; Continue Shopping</a>
+                <a class="btn btn-outline-dark" href="{% url 'storeUrl' %}">&#x2190; Continue Shopping</a>
                 <br>
                 <br>
                 <table class="table">
                     <tr>
-                        <th><h5>Items: <strong>{{ key_order.get_cart_items }}</strong></h5></th>
-                        <th><h5>Total: <strong>${{ key_order.get_cart_total|floatformat:2 }}</strong></h5></th>
+                        <th><h5>Items: <strong>{{ orderKey.get_cart_items }}</strong></h5></th>
+                        <th><h5>Total: <strong>${{ orderKey.get_cart_total|floatformat:2 }}</strong></h5></th>
                         <th>
-                            <a style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout_url' %}">Checkout</a>
+                            <a style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkoutUrl' %}">Checkout</a>
                         </th>
                     </tr>
                 </table>
@@ -28,7 +28,7 @@
                     <div style="flex:1"><strong>Total</strong></div>
                 </div>
 
-                {% for item in key_items %}
+                {% for item in itemsKey %}
                     <div class="cart-row">
                         <div style="flex:2">
                             <img class="row-image" src="{{ item.product.image_url }}">
@@ -42,8 +42,10 @@
                         <div style="flex:1">
                             <p class="quantity">{{ item.quantity }}</p>
                             <div class="quantity">
-                                <img class="chg-quantity" src="{% static  'images/arrow-up.png' %}">
-                                <img class="chg-quantity" src="{% static  'images/arrow-down.png' %}">
+                                <img data-product="{{ item.product.id }}" data-action="add"
+                                     class="chg-quantity update-cart" src="{% static  'images/arrow-up.png' %}">
+                                <img data-product="{{ item.product.id }}" data-action="remove"
+                                     class="chg-quantity update-cart" src="{% static  'images/arrow-down.png' %}">
                             </div>
                         </div>
                         <div style="flex:1">
@@ -54,4 +56,5 @@
 
             </div>
         </div>
+    </div>
 {% endblock %}
