--- a/ecommerce/templates/store/checkout.html
+++ b/ecommerce/templates/store/checkout.html
@@ -37,6 +37,7 @@
             </div>
             <div class="box-element hidden" id="payment-info">
                 <small>Paypal Options</small>
+                <button id="make-payment">Make Payment</button>
             </div>
         </div>
 
@@ -70,9 +71,19 @@
 
     <script type="text/javascript">
         const shipping = '{{ orderKey.shipping }}';
+        const total = '{{ orderKey.get_cart_total|floatformat:2 }}';
 
         if (shipping === 'False') {
             document.getElementById('shipping-info').innerHTML = '';
+        }
+
+        if (user !== 'AnonymousUser') {
+            document.getElementById('user-info').innerHTML = '';
+        }
+
+        if (shipping === 'False' && user !== 'AnonymousUser') {
+            document.getElementById('form-wrapper').classList.add('hidden');
+            document.getElementById('payment-info').classList.remove('hidden');
         }
 
         const form = document.getElementById('form');
@@ -81,6 +92,61 @@
             console.log('form submitted...');
             document.getElementById('form-button').classList.add('hidden');
             document.getElementById('payment-info').classList.remove('hidden');
-        })
+        });
+
+        document.getElementById('make-payment').addEventListener('click', function (e) {
+            submitFormData();
+        });
+
+        function submitFormData() {
+            console.log('tes submit form');
+
+            const userFormData = {
+                'name': null,
+                'email': null,
+                'total': total
+            };
+
+            const shippingInfo = {
+                'address': null,
+                'city': null,
+                'state': null,
+                'zipcode': null
+            };
+
+            if (shipping !== 'False') {
+                shippingInfo.address = form.address.value;
+                shippingInfo.city = form.city.value;
+                shippingInfo.state = form.state.value;
+                shippingInfo.zipcode = form.zipcode.value;
+            }
+
+            if (user === 'AnonymousUser') {
+                userFormData.name = form.name.value;
+                userFormData.email = form.email.value;
+            }
+
+            console.log('userformdata: ', userFormData);
+            console.log('shippinginfo: ', shippingInfo);
+
+            const url = '/process-order/';
+            fetch(url, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': csrftoken
+                },
+                body: JSON.stringify({
+                    'form': userFormData,
+                    'shipping': shippingInfo
+                })
+            })
+                .then((response) => response.json())
+                .then((data) => {
+                    console.log('Success', data);
+                    alert('Transaction completed');
+                    window.location.href = '{% url 'storeUrl' %}';
+                })
+        }
     </script>
 {% endblock %}
