--- a/antoniomele_blog/blog/templates/blog/post/list.html
+++ b/antoniomele_blog/blog/templates/blog/post/list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1>My Blog</h1>
-    {% for post in post_obj %}
+    {% for post in posts_obj %}
         <h2>
             <a href="{{ post.get_absolute_url }}">
                 {{ post.title }}
@@ -17,4 +17,6 @@
         </p>
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
+
+    {% include 'blog/pagination.html' with page=page_obj %}
 {% endblock %}
