--- a/absensirapat/templates/snippets/navbar.html
+++ b/absensirapat/templates/snippets/navbar.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Beranda</a>
+                    <a class="nav-link" href="{% url 'indexUrl' %}">Beranda</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Menu 1</a>
