--- a/absensirapat/templates/absensi/index.html
+++ b/absensirapat/templates/absensi/index.html
@@ -30,7 +30,34 @@
                 <td>{{ rapat.password }}</td>
                 <td>{{ rapat.pimpinan_rapat }}</td>
                 <td>{{ rapat.agenda }}</td>
-                <td><a class="btn btn-danger" href="#">Hapus</a></td>
+                <td>
+                    <a class="btn btn-danger" href="#" data-toggle="modal" data-target="#hapusModalWith{{ rapat.id }}">Hapus</a>
+                    <a class="btn btn-warning" href="{% url 'ubahRapatUrl' rapat.id %}">Ubah</a>
+                    <a class="btn btn-primary" href="#">Lihat Absen</a>
+
+                    <!-- Start of Modal -->
+                    <div class="modal fade" id="hapusModalWith{{ rapat.id }}" tabindex="-1" role="dialog"
+                         aria-labelledby="hapusModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="hapusModalLabel">Hapus</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    Apakah Anda yakin akan menghapus rapat tentang {{ rapat.agenda }}?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Tidak</button>
+                                    <a class="btn btn-primary" href="{% url 'hapusRapatUrl' rapat.id %}">Ya</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End of Modal -->
+                </td>
             </tr>
         {% endfor %}
         </tbody>
