--- a/antoniomele_blog/blog/templates/blog/post/detail.html
+++ b/antoniomele_blog/blog/templates/blog/post/detail.html
@@ -10,11 +10,11 @@
         Published {{ postKey.publish }} by {{ postKey.author }}
     </p>
     {{ postKey.body|linebreaks }}
-    
+
     <p>
         <a href="{% url 'blog:postShareUrl' postKey.id %}">Share this Post</a>
     </p>
-    
+
     {% with allCommentsKey.count as total_comment %}
         <h2>
             {{ total_comment }} comment{{ total_comment|pluralize }}
@@ -29,8 +29,19 @@
             </p>
             {{ comment.isi|linebreaks }}
         </div>
-        {% empty %}
+    {% empty %}
         <p>Tidak ada komentar</p>
     {% endfor %}
+
+    {% if newCommentKey %}
+        <h2>Berhasil menambahkan komentar</h2>
+    {% else %}
+        <h2>Tambah komentar baru</h2>
+        <form method="post">
+            {{ commentFormKey.as_p }}
+            {% csrf_token %}
+            <p><input type="submit" value="Tambah Komentar"/></p>
+        </form>
+    {% endif %}
 
 {% endblock %}
