--- a/antoniomele_blog/blog/templates/blog/post/list.html
+++ b/antoniomele_blog/blog/templates/blog/post/list.html
@@ -6,17 +6,28 @@
 
 {% block content %}
     <h1>My Blog</h1>
-    {% for post in posts_obj %}
+    {% if tagKey %}
+        <h2>Posts tagged with "{{ tagKey.name }}"</h2>
+    {% endif %}
+
+    {% for post in postsKey %}
         <h2>
             <a href="{{ post.get_absolute_url }}">
                 {{ post.title }}
             </a>
         </h2>
+        <p class="tags">
+            Tags:
+            {% for tag in post.tags.all %}
+                <a href="{% url 'blog:postByTagUrl' tag.slug %}">{{ tag.name }}</a>
+                {% if not forloop.last %}, {% endif %}
+            {% endfor %}
+        </p>
         <p class="date">
             Published {{ post.publish }} by {{ post.author }}
         </p>
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
 
-    {% include 'blog/pagination.html' with page=page_obj %}
+    {% include 'blog/pagination.html' with page=postsKey %}
 {% endblock %}
