--- a/absensirapat/templates/absensi/index.html
+++ b/absensirapat/templates/absensi/index.html
@@ -13,6 +13,7 @@
         <thead class="thead-dark">
         <tr>
             <th scope="col">NO.</th>
+            <th scope="col">KODE</th>
             <th scope="col">TANGGAL</th>
             <th scope="col">MEETING ID</th>
             <th scope="col">PASSWORD</th>
@@ -24,7 +25,8 @@
         <tbody>
         {% for rapat in allRapatKey %}
             <tr>
-                <th scope="row">{{ forloop.counter }}</th>
+                <td>{{ forloop.counter }}</td>
+                <td><a href="{% url 'formPesertaUrl' rapat.kode %}">{{ rapat.kode }}</a></td>
                 <td>{{ rapat.tanggal }}</td>
                 <td>{{ rapat.meeting_id }}</td>
                 <td>{{ rapat.password }}</td>
