daftarnominatif - upload untuk model pegawai

--- a/absensirapat/templates/absensi/index.html
+++ b/absensirapat/templates/absensi/index.html
@@ -35,7 +35,7 @@
                 <td>
                     <a class="btn btn-danger" href="#" data-toggle="modal" data-target="#hapusModalWith{{ rapat.id }}">Hapus</a>
                     <a class="btn btn-warning" href="{% url 'ubahRapatUrl' rapat.id %}">Ubah</a>
-                    <a class="btn btn-primary" href="{% url 'peserta_app:indexUrl' rapat.id %}">Lihat Absen</a>
+                    <a class="btn btn-primary" href="{% url 'pesertaApp:indexUrl' rapat.id %}">Lihat Absen</a>
 
                     <!-- Start of Modal -->
                     <div class="modal fade" id="hapusModalWith{{ rapat.id }}" tabindex="-1" role="dialog"
