--- a/absensirapat/templates/snippets/navbar.html
+++ b/absensirapat/templates/snippets/navbar.html
@@ -14,11 +14,18 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'indexUrl' %}">Beranda</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Menu 1</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Nominatif
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'nominatifApp:indexUrl' %}">Daftar Pegawai</a>
+                        <a class="dropdown-item" href="{% url 'nominatifApp:uploadUrl' %}">Upload</a>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Menu 2</a>
+                    <a class="nav-link" href="#">Menu</a>
                 </li>
             </ul>
         </div>
