--- a/absensirapat/templates/snippets/navbar.html
+++ b/absensirapat/templates/snippets/navbar.html
@@ -21,7 +21,9 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="{% url 'nominatifApp:indexUrl' %}">Daftar Pegawai</a>
+{% comment %}
                         <a class="dropdown-item" href="{% url 'nominatifApp:uploadUrl' %}">Upload</a>
+{% endcomment %}
                     </div>
                 </li>
                 <li class="nav-item">
