--- a/antoniomele_bookmarks/templates/base.html
+++ b/antoniomele_bookmarks/templates/base.html
@@ -9,6 +9,22 @@
 <body>
     <div id="header">
         <span class="logo">Bookmarks</span>
+        {% if request.user.is_authenticated %}
+            <ul class="menu">
+                <li {% if section == 'dashboard' %} class="selected" {% endif %} ><a href="{% url 'dashboardUrl' %}">My
+                    Dashboard</a></li>
+                <li {% if section == 'images' %} class="selected" {% endif %} ><a href="#">Imaged</a></li>
+                <li {% if section == 'people' %} class="selected" {% endif %} ><a href="#">People</a></li>
+            </ul>
+        {% endif %}
+
+        <span class="user">
+        {% if request.user.is_authenticated %}
+            Hello {{ request.user.first_name }},  <a href="{% url 'keluarUrl' %}">Keluar</a>
+        {% else %}
+            <a href="{% url 'login' %}">Masuk</a>
+        {% endif %}
+    </span>
     </div>
     <div id="content">
         {% block content %}
