antoniomele_bookmarks - penambahan proses daftar

--- a/antoniomele_bookmarks/templates/registration/login.html
+++ b/antoniomele_bookmarks/templates/registration/login.html
@@ -8,7 +8,7 @@
         <p>Username dan password yang Anda masukkan salah.
             Silakan dicoba lagi.</p>
     {% else %}
-        <p>Silakan menggunakan form dibawah ini untuk login</p>
+        <p>Silakan menggunakan form dibawah ini untuk login atau <a href="{% url 'daftarUrl' %}">daftar</a> terlebih dahulu.</p>
     {% endif %}
 
     <div class="login-form">
