antoniomele_bookmarks - penambahan profil pada user

--- a/antoniomele_bookmarks/templates/account/dashboard.html
+++ b/antoniomele_bookmarks/templates/account/dashboard.html
@@ -5,4 +5,6 @@
 {% block content %}
     <h1>Dashboard</h1>
     <p>Selamat datang.</p>
+    <p>Anda dapat <a href="{% url 'ubahUrl' %}">mengganti profil</a> atau <a href="{% url 'gantiPaswordUrl' %}">mengganti
+        password</a></p>
 {% endblock %}
