--- a/absensirapat/templates/absensi/index.html
+++ b/absensirapat/templates/absensi/index.html
@@ -2,11 +2,11 @@
 
 {% block blokTitle %}
     {{ titleKey }}
-{% endblock blokTitle %}
+{% endblock %}
 
-{% block blokHeader %}
+{% block containerHeader %}
     {{ titleKey }}
-{% endblock blokHeader %}
+{% endblock %}
 
 {% block blokIsi %}
     <table class="table table-hover">
@@ -65,4 +65,4 @@
         </tbody>
     </table>
     <a class="btn btn-primary" href="{% url 'tambahRapatUrl' %}">Tambah</a>
-{% endblock blokIsi %}
+{% endblock %}
