--- a/absensirapat/templates/base.html
+++ b/absensirapat/templates/base.html
@@ -9,17 +9,24 @@
     {% include "snippets/scripts.html" %}
 </head>
 <body>
-    {% include "snippets/navbar.html" %}
-    <div class="container" style="margin-top:100px">
-        <h1>
-            {% block blokHeader %}
-            {% endblock blokHeader %}
-        </h1>
-    </div>
+    {% if request.user.is_authenticated %}
+        {% include "snippets/navbar.html" %}
 
-    <div class="container bg-light shadow mt-5">
-        {% block blokIsi %}
-        {% endblock blokIsi %}
-    </div>
+        <div class="container" style="margin-top:100px">
+            <h1>
+                {% block containerHeader %}
+                {% endblock containerHeader %}
+            </h1>
+        </div>
+
+        <div class="container bg-light shadow mt-5">
+            {% block blokIsi %}
+            {% endblock blokIsi %}
+        </div>
+
+    {% else %}
+        {% block blokLogin %}
+        {% endblock %}
+    {% endif %}
 </body>
 </html>
