--- a/absensirapat/templates/peserta/index.html
+++ b/absensirapat/templates/peserta/index.html
@@ -2,11 +2,11 @@
 
 {% block blokTitle %}
     {{ titleKey }}
-{% endblock blokTitle %}
+{% endblock %}
 
-{% block blokHeader %}
+{% block containerHeader %}
     {{ titleKey }}
-{% endblock blokHeader %}
+{% endblock %}
 
 {% block blokIsi %}
     <table class="table table-hover">
