--- a/absensirapat/templates/snippets/navbar.html
+++ b/absensirapat/templates/snippets/navbar.html
@@ -29,6 +29,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Menu</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logoutUrl' %}">Keluar</a>
+                </li>
             </ul>
         </div>
     </div>
