--- a/absensirapat/templates/base.html
+++ b/absensirapat/templates/base.html
@@ -27,6 +27,9 @@
     {% else %}
         {% block blokLogin %}
         {% endblock %}
+
+        {% block blokTambahPeserta %}
+        {% endblock %}
     {% endif %}
 </body>
 </html>
