absensirapat - penambahan kondisi di wsgi.py

--- a/absensirapat/templates/peserta/sukses.html
+++ b/absensirapat/templates/peserta/sukses.html
@@ -1,5 +1,15 @@
-{% extends "base.html" %}
-
-{% block blokIsi %}
-    <h1>Sukses</h1>
-{% endblock blokIsi %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Sukses</title>
+    {% include "snippets/styles.html" %}
+    {% include "snippets/scripts.html" %}
+    <style type="text/css">
+        body {
+            background: #eee !important;
+        }
+    </style>
+</head>
+<body>
+    <h1>Terima kasih sudah berpartisipasi</h1>
+</body>
